# deces_quebec

./: .gitignore  Décès par semaine au Québec par groupe age.ipynb  Décès par semaine au Québec.ipynb  README.md  README_english.md  pyproject.toml
.ipynb_checkpoints/: Décès par semaine au Québec par groupe age-checkpoint.ipynb
