[tool.poetry]
name = "deces_quebec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
jupyter = "^1.0.0"
pandas = "^1.0.5"
requests = "^2.24.0"
matplotlib = "^3.2.2"
seaborn = "^0.10.1"
pytest = "^5.4.3"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
